# swapkit-fee-experiment-analysis

./: .aidigestignore  .cursorrules  .gitignore  .pre-commit-config.yaml  FINAL_VALIDATION_SUMMARY.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_DEPLOYMENT_BLOCKED.md  PHASE4_DEPLOYMENT_COMPLETE.md  PHASE4_SQL_VALIDATION_CHECKLIST.md  PRECOMMIT_VALIDATION.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  SQL_VALIDATION_REPORT.md  TESTING_CHECKLIST.md  VALIDATION_REPORT.md  pyproject.toml  run_phase4_qa.py  validate_phase4_views.py  verify_setup.py
.cursor/: rules.mdc
.cursor/rules/: dbt.mdc  python.mdc  security.mdc  sql.mdc  streamlit.mdc  visualization.mdc
dashboards/: README.md  streamlit_app.py
dashboards/app/: Home.py
dashboards/app/components/: __init__.py  formatting.py
dashboards/app/pages/: 1_Phase_1__Overview.py  2_Phase_2__Elasticity_Analysis.py  3_Phase_3__User_Analysis.py  4_Phase_4__Pool_Analysis.py  6_Phase_4__Pool_Analysis.py.disabled  7_Phase_3__User_Analysis.py.disabled
dbt/: .gitignore  DEPLOYMENT_NOTES.md  README.md  dbt_project.yml
dbt/models/marts/: fct_elasticity_inputs.sql  fct_pool_elasticity_inputs.sql  fct_pool_weekly_summary.sql  fct_user_weekly_summary.sql  fct_weekly_summary_final.sql  schema.yml
dbt/models/sources/: sources.yml
dbt/models/staging/: schema.yml  stg_fee_periods_manual.sql  stg_swaps_experiment_window.sql
dbt/seeds/: schema.yml
docs/: CURSOR_RULES.md  PHASE3_IMPLEMENTATION_GUIDE.md  PHASE4_IMPLEMENTATION_GUIDE.md  SNOWFLAKE_SWAPKIT_SCHEMA.md  SWAPKIT_DATASHARE.md  THORChain_Fee_Experiment_Analysis_Plan.md  swapkit_bigquery_data_dictionary.md  swapkit_executive_summary.md
docs/execution_quality/: weekly_eq_data_dictionary.md
notebooks/: README.md
notebooks/03_phase3/: 02_build_cohorts.py  03_segment_analysis.py  04_ltv_analysis.py  data_qa_script.py  validate_phase4_sql.py  validate_sql_data.py
notebooks/execution_quality/: README.md
sql/: 00_create_schema.sql  01_stage_swaps_experiment_window.sql  02_daily_fee_bps.sql  03_detect_fee_changepoints.sql  04_validate_vs_schedule.sql  05_weekly_summary.sql  06_pool_weekly_summary.sql  07_user_weekly_summary.sql  07b_user_period_detail.sql  08_affiliate_weekly_summary.sql  09_prior_year_comparison.sql  10_option_materialize_tables.sql  11_fee_changes_chrono.sql  12_fee_periods_manual.sql  13_fee_periods_final.sql  14_weekly_summary_final.sql  15_experiment_validation_report.sql  16_affiliate_exclusion_check.sql  README.md  debug_periods.sql  debug_weekly_summary.sql  phase4_create_views.sql
sql/execution_quality/: outliers_thorchain_2025-10-27_20Mplus.sql  weekly_eq_quotes.sql
src/thorchain_fee_analysis/: __init__.py
src/thorchain_fee_analysis/analysis/: elasticity.py  ltv.py  retention.py  revenue_decomposition.py  segmentation.py
src/thorchain_fee_analysis/data/: snowflake_conn.py  user_data.py
src/thorchain_fee_analysis/visualization/: __init__.py  charts.py
tests/: __init__.py  conftest.py  test_example.py  test_snowflake_conn.py
tests/analysis/: test_elasticity.py  test_execution_quality.py  test_pool_elasticity.py  test_revenue_decomposition.py
tests/visualization/: test_charts.py
